<resources>
    <string name="app_name">Coding Story App</string>
    <string name="login_title_dashboard">Dicoding Story</string>
    <string name="login">Login</string>
    <string name="login_sub_title">Login to continue using the app.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="message_welcome">Welcome to Dicoding Story</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="register_sub_title">Create an Account to Enjoy the App!</string>
    <string name="cannot_empty">Please fill in first.</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Logout</string>
    <string name="photo">Photo of Detail Story</string>
    <string name="dummy_name">Fadhlan Sulistiyo</string>
    <string name="dummy_description">This is Description</string>
    <string name="share">Share</string>
    <string name="detail_user_avatar">Detail User Photo</string>
    <string name="dummy_date">01–01–2024</string>
    <string name="loading">Loading</string>
    <string name="description">Description</string>
    <string name="addStory_contentDesc">Show Image file from Camera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="settings">Settings</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="empty_image_warning">Please insert the image file first</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="detail_story">Detail Story</string>
    <string name="dicoding_logo">Dicoding Logo</string>
    <string name="example_email_com">example@email.com</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="title_activity_maps_story">MapsStoryActivity</string>
    <string name="maps">Maps</string>
    <string name="enable_location">Enable Location</string>
    <string name="retry">Try Again</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="there_is_a_new_story">There is a New Story!</string>
    <string name="no_media_selected">No Media Selected</string>
    <string name="no_photos_were_captured">No photos were captured</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>